--- a/requirements.txt
+++ b/requirements.txt
@@ -15,21 +15,26 @@ banal==1.0.6
 beartype==0.15.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
+blis==1.0.1
 bokeh==3.6.1
 boto3==1.35.57
 botocore==1.35.57
 cachetools==5.5.0
+catalogue==2.0.10
 certifi==2024.8.30
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.0
 click==8.1.7
+cloudpathlib==0.20.0
 cohere==5.1.8
 coloredlogs==15.0.1
 comm==0.2.2
+confection==0.1.5
 contourpy==1.3.0
 cryptography==43.0.3
 cycler==0.12.1
+cymem==2.0.8
 dataclasses-json==0.6.7
 dataset==1.6.2
 datasets==3.1.0
@@ -115,8 +120,10 @@ langchain-groq==0.2.1
 langchain-ollama==0.2.0
 langchain-openai==0.2.6
 langchain-text-splitters==0.3.2
+langcodes==3.4.1
 langdetect==1.0.9
 langsmith==0.1.142
+language_data==1.2.0
 layoutparser==0.3.4
 linkify-it-py==2.0.3
 litellm==1.42.12
@@ -137,6 +144,7 @@ llama-index-retrievers-pathway==0.2.0
 llama-parse==0.5.13
 lxml==5.3.0
 Mako==1.3.6
+marisa-trie==1.2.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -150,11 +158,12 @@ msal==1.31.0
 msg-parser==1.2.0
 multidict==6.1.0
 multiprocess==0.70.16
+murmurhash==1.0.10
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
-numpy==1.26.4
+numpy==2.1.3
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -199,6 +208,7 @@ pikepdf==9.4.0
 pillow==10.4.0
 pillow_heif==0.20.0
 portalocker==2.10.1
+preshed==3.0.9
 prompt_toolkit==3.0.48
 propcache==0.2.0
 proto-plus==1.25.0
@@ -251,17 +261,23 @@ setuptools==75.3.0
 shapely==2.0.6
 shellingham==1.5.4
 six==1.16.0
+smart-open==7.0.5
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
+spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 SQLAlchemy==1.4.54
 sqlglot==10.6.1
+srsly==2.4.8
 stack-data==0.6.3
 striprtf==0.0.26
 surya-ocr==0.4.14
 sympy==1.13.1
 tabulate==0.9.0
 tenacity==8.5.0
+thinc==8.3.2
 threadpoolctl==3.5.0
 tiktoken==0.8.0
 timm==1.0.11
@@ -285,7 +301,9 @@ unstructured-inference==0.7.33
 unstructured.pytesseract==0.3.13
 uritemplate==4.1.1
 urllib3==2.2.3
+wasabi==1.1.3
 wcwidth==0.2.13
+weasel==0.4.1
 webencodings==0.5.1
 widgetsnbextension==4.0.13
 wrapt==1.16.0
